worked on multiple login opportunities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/sw_bank?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.jpa.hibernate.ddl-auto=update 
 spring.datasource.username= sw_user
 spring.datasource.password= sw_user
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.initialization-mode=always
+spring.datasource.data=import.sql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
