--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/sw_bank?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username= sw_user
 spring.datasource.password= sw_user
-spring.datasource.initialization-mode=never
-#spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
