resolve todo move salt to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
+user-password-salt="Super-streng-geh€1m"
+
