--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/sw_bank?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username= sw_user
-spring.datasource.password= sw_user
+spring.datasource.url=jdbc:mysql://im-knuth.oth-regensburg.de:3306/sw_stefan_bauer
+spring.datasource.username=sw_stefan_bauer
+spring.datasource.password=sw_banking_secret
 #spring.datasource.initialization-mode=never
 spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=5
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 user-password-salt="Super-streng-geh€1m"
+
 
