--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
+server.port=8915
+
 user-password-salt="Super-streng-geh€1m"
 
 
