--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
