--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/sw_bank?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username= sw_user
-spring.datasource.password= sw_user
+spring.datasource.username=sw_user
+spring.datasource.password=${password_database}
 #spring.datasource.initialization-mode=never
 spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
@@ -15,5 +15,5 @@ logging.level.org.springframework.web=DEBUG
 
 server.port=8915
 
-user-password-salt="Super-streng-geh€1m"
+user-password-salt=${password_salt}
 
