--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://im-knuth.oth-regensburg.de:3306/sw_stefan_bauer
 spring.datasource.username=sw_stefan_bauer
-spring.datasource.password=sw_banking_secret
+spring.datasource.password=${password_database}
 #spring.datasource.initialization-mode=never
 spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
@@ -16,6 +16,6 @@ logging.level.org.springframework.web=DEBUG
 
 server.port=8915
 
-user-password-salt="Super-streng-geh€1m"
+user-password-salt=${password_salt}
 
 
