update readme and application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://im-knuth.oth-regensburg.de:3306/sw_stefan_bauer
-spring.datasource.username=sw_stefan_bauer
-spring.datasource.password=${password_database}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #spring.datasource.initialization-mode=never
 spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
@@ -16,6 +16,6 @@ logging.level.org.springframework.web=DEBUG
 
 server.port=8915
 
-user-password-salt=${password_salt}
+user-password-salt=${USER_PASSWORD_SALT}
 
 
