--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/sw_bank?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=sw_user
-spring.datasource.password=${password_database}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 #spring.datasource.initialization-mode=never
 spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
@@ -15,5 +15,5 @@ logging.level.org.springframework.web=DEBUG
 
 server.port=8915
 
-user-password-salt=${password_salt}
+user-password-salt=${USER_PASSWORD_SALT}
 
