update env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ logging.level.org.springframework.web=DEBUG
 
 server.port=8915
 
-user-password-salt=${USER_PASSWORD_SALT}
+user-password-salt=${PASSWORD_SALT}
 
 
