--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -15,5 +15,5 @@ logging.level.org.springframework.web=DEBUG
 
 server.port=8915
 
-user-password-salt=${USER_PASSWORD_SALT}
+user-password-salt=${PASSWORD_SALT}
 
