refactor application.properties

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,6 @@
+###########################################################
+# Datasource
+###########################################################
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -5,15 +8,21 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+###########################################################
+# JPA
+###########################################################
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-
+###########################################################
+# Logging
+###########################################################
+logging.level.root=debug
+###########################################################
+# Application
+###########################################################
 server.port=8915
-
 user-password-salt=${PASSWORD_SALT}
 
