--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+###########################################################
+# Database Connection
+###########################################################
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -6,16 +9,22 @@ spring.datasource.initialization-mode=always
 spring.datasource.data=import.sql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=5
+###########################################################
+# JPA
+###########################################################
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-
+###########################################################
+# Logging
+###########################################################
+logging.level.root=warn
+###########################################################
+# Application
+###########################################################
 server.port=8915
-
 user-password-salt=${PASSWORD_SALT}
 
 
