began implementing authentication of associates

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -25,4 +25,8 @@ logging.level.root=debug
 ###########################################################
 server.port=8915
 user-password-salt=${PASSWORD_SALT}
+###########################################################
+# Associate Authentication
+###########################################################
+token-vigo-pay=${TOKEN_VIGO_PAY}
 
