update application.properties read list of tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,9 @@ logging.level.root=warn
 ###########################################################
 server.port=8915
 user-password-salt=${PASSWORD_SALT}
+###########################################################
+# Associate Authentication
+###########################################################
+authentication-tokens=${AUTHENTICATION_TOKENS}
 
 
