--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -28,5 +28,5 @@ user-password-salt=${PASSWORD_SALT}
 ###########################################################
 # Associate Authentication
 ###########################################################
-token-vigo-pay=${TOKEN_VIGO_PAY}
+authentication-tokens=${AUTHENTICATION_TOKENS}
 
