--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,11 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>de.othr.bib48218</groupId>
+            <artifactId>chat</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
